2005-10-08  Sureshkumar T  <tsureshkumar@novell.com>

	* System.Data.dll.sources: added
	System.Data.Odbc/NativeBuffer.cs. native buffer pointer.

2005-09-20 Konstantin Triger <kostat@mainsoft.com>

	* Added jay.bat to run jay in java prebuild step
	* System.Data.vmwcsproj: added prebuild step

2005-09-02 Umadevi S <sumadevi@novell.com>
	* System.Data.dll.sources: Added SqlProcedureAttribute,SqlTriggerAttribute and 
	 SqlTriggerContext.cs to Microsoft.SqlServer.Server namespace.Also added SqlXml to 		     SqlTypes namespace	

2005-09-02 Umadevi S <sumadevi@novell.com>
	* System.Data.dll.sources: Changes for Microsoft.SqlServer.Server namespace and the
	files to be compiled with it, removed files from System.Data.Sql namespace
	Also removed SqlResultSet.cs from System.SqlClient namespace

2005-09-01 Boris Kirzner <borisk@mainsoft.com>
	* System.Data.dll.sources: fixed build. Changed reference to Consts.cs.in.

2005-08-31 Boris Kirzner <borisk@mainsoft.com>
	* System.Data.vmwcsproj: changed reference to Consts.cs.in.

2005-08-22 Boris Kirzner <borisk@mainsoft.com>
	* System.Data.vmwcsproj: changed reference to Consts.cs.

2005-08-20 Gert Driesen <drieseng@users.sourceforge.net>
	* Makefile: Allow unsafe code. This fixes the build on Windows (using
	csc).

2005-07-27 Boris Kirzner <borisk@mainsoft.com>
	* System.Data.vmwcsproj: changed location of rt.dll in TARGET_JVM project file.
	
2005-07-21 Boris Kirzner <borisk@mainsoft.com>
	* System.Data.vmwcsproj, System.Data.sln - removed source control 
	information from TARGET_JVM project and solution files.
	
2005-07-12  Eyal Alalouf  <eyala@mainsoft.com>
	* System.Data_tests.dll.sources:
	  Removed use of obsolete System.Data.Tests.Mainsoft/GHTUtils

2005-07-12  Eyal Alalouf  <eyala@mainsoft.com>
	* System.Data_tests.dll.sources:
	  Standardized Mainsoft System.Data exception tests

2005-07-12  Eyal Alalouf  <eyala@mainsoft.com>
	* System.Data_tests.dll.sources: