@@ -1,3 +1,12 @@
+2005-11-11  Senganal T <tsenganal@novell.com>
+
+	* DataSet.cs : Added the SchemaSerializationMode Property for NET_2_0
+	compatibility.
+	* SchemaSerializationMode.cs : Added SchemaSerializationMode Enumeration
+	for NET_2_0 compatibility.
+
+	Fixes bug #76517
+
 2005-10-20  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* XmlSchemaWriter.cs : escape names in the schema with XmlConvert.
